--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,9 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <base href="$FLUTTER_BASE_HREF">
+
+
   <script src="https://cdn.jsdelivr.net/npm/url-launcher@2.0/url_launcher.js"></script>
 
   <meta charset="UTF-8">
@@ -25,13 +27,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="portfolio">
+  <meta name="apple-mobile-web-app-title" content="Portfolio">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>portfolio</title>
+  <title>Portfolio</title>
   <link rel="manifest" href="manifest.json">
 </head>
 
