--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,9 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/Portfolio/">
+  <base href="$FLUTTER_BASE_HREF">
+
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/url-launcher@2.0/url_launcher.js"></script>
